[tool.poetry]
name = "auto-tests"
version = "0.1.0"
description = ""
authors = ["golosin <mail325@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = "^0.27.0"
starlette = "^0.28.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
python-dotenv = "^1.0.0"
black = "^23.3.0"
allure-pytest = "^2.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
